[gd_scene load_steps=5 format=2]

[ext_resource path="res://ObjectSprites/Sign.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Test_Scripts/NPCTest.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.0624, 11.5847 )

[node name="NPCTest" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 43
script = ExtResource( 2 )
interaction_script = "res://dialogues/TestNPC.json"

[node name="TestNPC" type="Sprite" parent="."]
position = Vector2( 0, -0.263519 )
z_index = 4
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.30724, -11.4524 )
scale = Vector2( 1, 1.8 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.922112, 15.0605 )
shape = SubResource( 1 )

[node name="NPC_Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.820694, 12.5466 )
z_index = 4
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="anim" type="AnimationPlayer" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
